# xcbars

./: .travis.yml  Cargo.toml  Dockerfile  Dockerfile.stable  DockerfileNightly  DockerfileStable  README.md  clippy.toml
examples/: bar.rs
src/: bar.rs  bar_builder.rs  bar_properties.rs  component.rs  component_context.rs  error.rs  item.rs  item_state.rs  lib.rs  string_component.rs  xcb_event_stream.rs
src/components/: clock.rs  mod.rs  network_usage.rs  pipe.rs  text.rs  window_title.rs
src/utils/: composite.rs  mod.rs  stream_loop_fn.rs
