[package]
name = "xcbars"
version = "0.1.0"
authors = ["Mitja Karhusaari <monttu300@gmail.com>"]
description = "A standalone bar library created with XCB, cairo and pango."
repository = "https://github.com/dogamak/xcbars"
documentation = "docs.rs/xcbars"
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"

[badges.tarvis-ci]
repository = "dogamak/xcbars"

[dependencies]
cairo-rs = { git = "https://github.com/gtk-rs/cairo.git", features = ["xcb", "png"] }
mio = "*"
cairo-sys-rs = { git = "https://github.com/gtk-rs/cairo.git", features = ["xcb"] }
error-chain = "*"
futures = "*"
pango = { git = "https://github.com/gtk-rs/pango.git" }
pangocairo = { git = "https://github.com/razrfalcon/pangocairo-rs.git" }
procinfo = "^0.4.2"
tokio-core = "*"
tokio-io = "*"
tokio-process = "*"
tokio-timer = "*"
xcb = { git = "https://github.com/rtbo/rust-xcb.git", features = ["randr"] }
time = "0.1.38"
